fix: translations spacing

--- a/h5p-bildetema/src/components/CollectionsController/MultiLanguageWord/MultiLanguageWord.module.scss
+++ b/h5p-bildetema/src/components/CollectionsController/MultiLanguageWord/MultiLanguageWord.module.scss
@@ -25,8 +25,9 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 0.5rem 0.25rem;
+  padding: 0 0.25rem 0.5rem;
 }
+
 .translation {
   display: flex;
   flex-direction: column;
